--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,7 +1,18 @@
-name: OpenWrt-24.10-x86_64
+name: Build OpenWrt 23.05 x86_64 Final
 
 on:
   workflow_dispatch:
+
+env:
+  REPO_URL: https://github.com/openwrt/openwrt
+  REPO_BRANCH: openwrt-23.05
+  FEEDS_CONF: feeds.conf.default
+  CONFIG_FILE: .config
+  DIY_P1_SH: diy-part1.sh
+  DIY_P2_SH: diy-part2.sh
+  UPLOAD_BIN_DIR: false
+  UPLOAD_FIRMWARE: true
+  TZ: Asia/Shanghai
 
 jobs:
   build:
@@ -9,52 +20,91 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
 
-    - name: Free Disk Space
+    - name: Free Disk Space & Setup Swap
       run: |
-        sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/lib/android
-        sudo docker system prune -af
-        df -h
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell /etc/mysql /etc/php
+        sudo docker image prune -a -f
+        sudo fallocate -l 8G /swapfile
+        sudo chmod 600 /swapfile
+        sudo mkswap /swapfile
+        sudo swapon /swapfile
 
-    - name: Install Dependencies
+    - name: Initialization Environment
       run: |
-        sudo apt update
-        sudo apt install -y \
-          build-essential clang flex g++ gawk gcc-multilib gettext \
-          git libncurses-dev libssl-dev python3-setuptools rsync unzip \
-          zlib1g-dev file wget
+        sudo apt-get update
+        sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev
 
-    - name: Clone OpenWrt 24.10
+    - name: Clone Source Code
       run: |
-        git clone https://github.com/openwrt/openwrt.git
-        cd openwrt
-        git checkout openwrt-24.10
+        git clone -b $REPO_BRANCH --single-branch $REPO_URL openwrt
 
     - name: Update & Install Feeds
       run: |
         cd openwrt
+        cat > feeds.conf.default <<EOF
+        src-git packages https://github.com/openwrt/packages.git;openwrt-23.05
+        src-git luci https://github.com/openwrt/luci.git;openwrt-23.05
+        src-git routing https://github.com/openwrt/routing.git;openwrt-23.05
+        src-git telephony https://github.com/openwrt/telephony.git;openwrt-23.05
+        src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main
+        src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main
+        src-git kenzo https://github.com/kenzok8/openwrt-packages.git;main
+        src-git small https://github.com/kenzok8/small.git;main
+        EOF
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
-    - name: Copy Config
+    - name: Load Custom Configuration & Set IP
       run: |
-        cp config-x86_64-24.10 .config
-        cd openwrt
-        make defconfig
+        # 1. 写入 .config
+        cat > openwrt/.config <<EOF
+        CONFIG_TARGET_x86=y
+        CONFIG_TARGET_x86_64=y
+        CONFIG_TARGET_x86_64_DEVICE_generic=y
+        CONFIG_TARGET_KERNEL_PARTSIZE=64
+        CONFIG_TARGET_ROOTFS_PARTSIZE=1280
+        CONFIG_PACKAGE_ipv6helper=y
+        CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+        CONFIG_PACKAGE_luci-app-passwall=y
+        CONFIG_PACKAGE_luci-app-smartdns=y
+        CONFIG_PACKAGE_luci-app-mwan3=y
+        CONFIG_PACKAGE_luci-app-mwan3helper=y
+        CONFIG_PACKAGE_luci-app-adguardhome=y
+        CONFIG_PACKAGE_luci-app-ddns=y
+        CONFIG_PACKAGE_ddns-scripts=y
+        CONFIG_PACKAGE_ddns-scripts-cloudflare=y
+        CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+        CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+        CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+        CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
+        CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
+        CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+        CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
+        EOF
+        
+        # 2. 修改默认网关 IP 为 192.168.2.1
+        sed -i 's/192.168.1.1/192.168.2.1/g' openwrt/package/base-files/files/bin/config_generate
+        
+        # 3. 预设时区
+        sed -i "s/'UTC'/'CST-8'\n\t\tset system.@system[-1].zonename='Asia\/Shanghai'/g" openwrt/package/base-files/files/bin/config_generate
+        
+        cd openwrt && make defconfig
 
-    - name: Download Packages
+    - name: Download Library
       run: |
         cd openwrt
-        make download -j1
+        make download -j8
 
-    - name: Compile (Single Thread)
+    - name: Compile Firmware (Single Thread)
       run: |
         cd openwrt
+        make dirclean
         make -j1 V=s
 
-    - name: Upload Firmware
-      uses: actions/upload-artifact@v4
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
       with:
-        name: OpenWrt-x86_64-24.10
-        path: openwrt/bin/targets/x86/64/
+        name: OpenWrt_x86_64_Firmware_192.168.2.1
+        path: openwrt/bin/targets/x86/64/*.img*
